<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_add"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/image_add"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:layout_marginBottom="180dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/liner2"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_color"
        >

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:background="@null"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:autofillHints="username"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/surname"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/liner"
        app:layout_constraintBottom_toTopOf="@+id/liner3"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_color"
        >

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surname"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:background="@null"
            android:gravity="start|center"
            android:layout_marginStart="10dp"
            android:inputType="textPersonName"
            android:autofillHints="username"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/liner2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_color"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/date"
            />

        <TextView
            android:id="@+id/brith_day"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:hint="@string/date_of_birth"
            android:textStyle="normal"
            android:background="@null"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:gravity="center|start"
            android:textAllCaps="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            />

    </LinearLayout>
    


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="#0288D1"
        app:cornerRadius="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        />

</androidx.constraintlayout.widget.ConstraintLayout>